--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
     <div class="main-container">
         <div class="head-container">
             <button id="clear-btn" onclick="clearDisplay()">C</button>
-            <input type="text" id="input-text" >
+            <input type="text" id="input-text" disabled>
         </div>
 
         <div class="button-container">
             <button class="button button-7" onclick="appendNumber('7')">7</button>
             <button class="button button-8" onclick="appendNumber('8')">8</button>
             <button class="button button-9" onclick="appendNumber('9')">9</button>
-            <button class="button button-function" onclick="appendNumber('+')">+</button>
+            <button class="button button-function" onclick="appendOparator('+')">+</button>
 
             <button class="button button-4" onclick="appendNumber('4')">4</button>
             <button class="button button-5" onclick="appendNumber('5')">5</button>
             <button class="button button-6" onclick="appendNumber('6')">6</button>
-            <button class="button button-function" onclick="appendNumber('-')">-</button>
+            <button class="button button-function" onclick="appendOparator('-')">-</button>
 
             <button class="button button-1" onclick="appendNumber('1')">1</button>
             <button class="button button-2" onclick="appendNumber('2')">2</button>
             <button class="button button-3" onclick="appendNumber('3')">3</button>
-            <button class="button button-function" onclick="appendNumber('/')">/</button>
+            <button class="button button-function" onclick="appendOparator('/')">/</button>
 
             <button class="button button-0" onclick="appendNumber('0')">0</button>
             <button class="button button-dot" onclick="appendNumber('.')">.</button>
             <button class="button button-equal" onclick="calculate()">=</button>
-            <button class="button button-function" onclick="appendNumber('*')">x</button>
+            <button class="button button-function" onclick="appendOparator('*')">x</button>
         </div>
     </div>
     <script src="/js/index.js"></script>
